--- a/res/values-nl/arrays.xml
+++ b/res/values-nl/arrays.xml
@@ -119,8 +119,8 @@
     </string-array>
 
     <string-array name="entries_ime_preference">
-        <item>Karakter gebaseerd</item>
-        <item>Woord gebaseerd</item>
+        <item>Karakter gebasseerd</item>
+        <item>Woord gebasseerd</item>
     </string-array>
 
     <!-- Do not localize entryvalues -->
