AndroidTerm: Updated German Translation
Change-Id: I29bc56087bbad169f9fcd0b1ff836d9a6e05bd0a

--- a/res/values-de/arrays.xml
+++ b/res/values-de/arrays.xml
@@ -64,6 +64,16 @@
     <item>Kamera-Taste</item>
   </string-array>
 
+  <string-array name="entries_fnkey_preference">
+    <item>Trackball</item>
+    <item>\@ Taste</item>
+    <item>Linke Alt-Taste</item>
+    <item>Rechte Alt-Taste</item>
+    <item>Lauter</item>
+    <item>Leiser</item>
+    <item>Kamera-Taste</item>
+  </string-array>
+
   <string-array name="entries_ime_preference">
     <item>Zeichen-basiert</item>
     <item>Wort-basiert</item>
