--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -57,4 +57,49 @@
         <item>По словам</item>
     </string-array>
 
+    <string-array name="entries_cursorblink_preference">
+        <item>Немигающий курсор</item>
+        <item>Мигающий курсор</item>
+    </string-array>
+
+    <string-array name="entries_cursorstyle_preference">
+        <item>Прямоугольный</item>
+        <item>Подчёркивание</item>
+        <item>Вертикальная черта</item>
+    </string-array>
+
+    <string-array name="entries_fnkey_preference">
+        <item>Трекбол</item>
+        <item>Клавиша \@</item>
+        <item>Левый Alt</item>
+        <item>Правый Alt</item>
+        <item>Громкость вверх</item>
+        <item>Громкость вниз</item>
+        <item>Кнопка камеры</item>
+        <item>Нет</item>
+    </string-array>
+
+    <!-- These are the 'short' names for the control keys. They are used in the special keys dialog. -->
+    <string-array name="control_keys_short_names">
+        <item>Трекбол</item>
+        <item>Клавиша \@</item>
+        <item>Левый Alt</item>
+        <item>Правый Alt</item>
+        <item>Громкость вверх</item>
+        <item>Громкость вниз</item>
+        <item>Кнопка камеры</item>
+        <item>Нет</item>
+    </string-array>
+
+    <!-- These are the 'short' names for the Fn keys. They are used in the special keys dialog. -->
+    <string-array name="fn_keys_short_names">
+        <item>Трекбол</item>
+        <item>Клавиша \@</item>
+        <item>Левый Alt</item>
+        <item>Правый Alt</item>
+        <item>Громкость вверх</item>
+        <item>Громкость вниз</item>
+        <item>Кнопка камеры</item>
+        <item>Нет</item>
+    </string-array>
 </resources>
